mdapipkg/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Case_Sequence__c</fullName>
        <label>Case Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Case__c</fullName>
        <label>Reason Case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request Reshipment</fullName>
                </value>
                <value>
                    <fullName>Hold Shipment: Incorrect Order</fullName>
                </value>
                <value>
                    <fullName>Hold Shipment: Incorrect Address</fullName>
                </value>
                <value>
                    <fullName>Not Shipping</fullName>
                </value>
                <value>
                    <fullName>Unpaid Order</fullName>
                </value>
                <value>
                    <fullName>No Valid Card</fullName>
                </value>
                <value>
                    <fullName>Unpaid Upsell</fullName>
                </value>
                <value>
                    <fullName>Unpaid Autoship</fullName>
                </value>
                <value>
                    <fullName>Save Sale Validation</fullName>
                </value>
                <value>
                    <fullName>Refund Required</fullName>
                </value>
                <value>
                    <fullName>Authorization Release Failed</fullName>
                </value>
                <value>
                    <fullName>Old Coupon In Flight</fullName>
                </value>
                <value>
                    <fullName>Warm Lead</fullName>
                </value>
                <value>
                    <fullName>Refund Failed</fullName>
                </value>
                <value>
                    <fullName>Low Inventory</fullName>
                </value>
                <value>
                    <fullName>Cancel of Autoship</fullName>
                </value>
                <value>
                    <fullName>New Knowledge Article Requested</fullName>
                </value>
                <value>
                    <fullName>Change Autoship</fullName>
                </value>
                <value>
                    <fullName>Chargeback Threat</fullName>
                </value>
                <value>
                    <fullName>Back Order</fullName>
                </value>
                <value>
                    <fullName>Split Shipment</fullName>
                </value>
                <value>
                    <fullName>Contact Us</fullName>
                </value>
                <value>
                    <fullName>Social Interaction</fullName>
                </value>
                <value>
                    <fullName>Article Correction</fullName>
                </value>
                <value>
                    <fullName>Chargeback Received</fullName>
                </value>
                <value>
                    <fullName>Fraud Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>